# application-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.airflow.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
airflow/config/: airflow.cfg
airflow/dags/: automation.py
airflow/dags/automation_util/classification/: dto.py  task_input_classification.py
airflow/dags/automation_util/inputs/: dto.py
airflow/dags/automation_util/inputs/input_web/: dto.py  index_group.py  task_input_parser.py  task_text_message.py
airflow/dags/automation_util/perform_actions/: group_perform_action.py
airflow/dags/automation_util/perform_actions/note/: dto.py  task_extract_note.py  task_process_note_to_api.py
airflow/dags/automation_util/perform_actions/task/: dto.py  task_extract_task.py  task_process_task_to_api.py
airflow/plugins/: airflow_config.py  telegram_ingestion_dto.py
airflow/plugins/llm/: llm_templates.py  repository.py
app/apps/accounts/: admin.py  api.py  models.py  serializers.py  urls.py
app/apps/accounts/migrations/: 0001_initial.py
app/apps/notes/: admin.py  api.py  apps.py  models.py  serializers.py  signals.py  urls.py
app/apps/notes/migrations/: 0001_initial.py
app/apps/tasks/: admin.py  api.py  apps.py  models.py  serializers.py  signals.py  urls.py
app/apps/tasks/migrations/: 0001_initial.py
app/apps/threads/: admin.py  api.py  apps.py  models.py  serializers.py  signals.py  urls.py
app/apps/threads/migrations/: 0001_initial.py
app/config/: settings.py  urls.py
nginx/: .conf  tmp.conf
(+4 files in other folders)
